k8s/gruve-noc-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noc-agent-be
  namespace: gruve-noc
spec:
  selector:
    app: noc-agent-be
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 1162
    targetPort: 1162
    protocol: UDP
    name: snmp-trap
