k8s/gruve-noc-be-snmp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: noc-agent-be-snmp
  namespace: gruve-noc
spec:
  type: NodePort
  selector:
    app: noc-agent-be
  ports:
  - port: 1162
    targetPort: 1162
    protocol: UDP
    name: snmp-trap
    nodePort: 31162
