k8s/gruve-noc-mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: gruve-noc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: docker.io/library/mongo:7.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 1Gi
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc-rwx
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: gruve-noc
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
