k8s/gruve-noc-be-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noc-agent-be
  namespace: gruve-noc
  labels:
    app: noc-agent-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noc-agent-be
  template:
    metadata:
      labels:
        app: noc-agent-be
    spec:
      serviceAccountName: default
      containers:
      - name: noc-agent-be
        image: registry.gruveai.com/gruve-noc/noc-agent-backend:v1.5.38
        ports:
        - containerPort: 8000
          protocol: TCP
          name: http
        - containerPort: 1162
          protocol: UDP
          name: snmp-trap
        livenessProbe:
          httpGet:
            path: /livez
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 15
          failureThreshold: 3
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: noc-agent-be
  namespace: gruve-noc
spec:
  selector:
    app: noc-agent-be
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 1162
    targetPort: 1162
    protocol: UDP
    name: snmp-trap
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: noc-agent-be
  namespace: gruve-noc
spec:
  host: noc-api-gruve-noc.apps.ocp-mig2.gruveai.com
  to:
    kind: Service
    name: noc-agent-be
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
